src/styles/global.css
:root {

  /* OPACITY */
  --opacity-high: 0.9;
  --opacity-medium-high: 0.7;
  --opacity-medium: 0.4;
  --opacity-low: 0.1;


  /* COLORS */
  /* Hue */
  --hue-primary: 213;
  --hue-secondary: 240;
  --hue-accent: 20;

  /* Lightness */
  --lightness-dark: 2%;

  --color-lightest: hsl(var(--hue-accent), 50%, 90%);
  --color-medium: hsl(var(--hue-secondary), 5%, 50%);
  --color-medium-dark: hsl(var(--hue-secondary), 10%, 30%);
  --color-dark: hsl(var(--hue-primary), 30%, 10%);
  --color-darkest: hsl(var(--hue-primary), 100%, var(--lightness-dark));

  --color-frost: hsla(var(--hue-accent), 0%, 100%, var(--opacity-low));
  --color-text-decoration: hsla(var(--hue-secondary), 5%, 50%, var(--opacity-medium-high));


  /* BORDERS */
  --border-thin: 2px solid var(--color-medium);
  --border-chonk: 3px solid var(--color-medium);

  --border-radius-circle: 50%;
  --border-radius-soft: 15px;
  --border-radius-sharp: 5px;


  /* BACKGROUND */
  /* Mobile */
  --bg-image-portrait-fb: url('../assets/bg-portrait-414-fallback.jpg');
  --bg-image-portrait-sm: url('../assets/bg-portrait-414.webp');
  --bg-image-portrait-lg: url('../assets/bg-portrait-720.webp');
  --bg-image-portrait-xlg: url('../assets/bg-portrait-1440.webp');
  --bg-image-portrait: url('../assets/bg-portrait-414-fallback.jpg');

  /* Desktop */
  --bg-image-landscape-fb: url('../assets/bg-landscape-1920-fallback.jpg');
  --bg-image-landscape-sm: url('../assets/bg-landscape-1920.webp');
  --bg-image-landscape-lg: url('../assets/bg-landscape-2880.webp');

  --bg-overlay: 
    hsla(
      var(--hue-primary), 
      0%, 
      0%, 
      var(--opacity-medium)
    );


  /* TEXT */
  /* Font stacks */
  --font-stack-heading: 'Raleway', 'Trebuchet MS', sans-serif;
  --font-stack-body: 'Source Sans 3', sans-serif; 
  --font-stack-body: 'Open Sans', 'Trebuchet MS', sans-serif;

  /* Font sizes */
  --font-size-200: clamp(0.5rem, 0.42rem + 0.427vw, 0.9rem);
  --font-size-300: clamp(0.8rem, 0.76rem + 0.213vw, 1rem);
  
  /* --font-size-400: clamp(1rem, 0.96rem + 0.213vw, 1.2rem); */
  --font-size-400: clamp(0.9rem, 0.84rem + 0.3vw, 1.2rem);
  /* --font-size-400: 1rem; */
  --font-size-500: clamp(1rem, 0.96rem + 0.2vw, 1.2rem);
  --font-size-600: clamp(1.1rem, 1.07rem + 0.16vw, 1.25rem);
  --font-size-700: clamp(1rem, 0.9rem + 0.5vw, 1.5rem);
  --font-size-800: clamp(1.25rem, 1.1rem + 0.75vw, 2rem);
  --font-size-850: clamp(1.5rem, 1.2rem + 1.4vw, 2.5rem);
  --font-size-900: clamp(2rem, 1.4rem + 3vw, 5rem);

  /* Font weights */
  --font-weight-thin: 200;
  --font-weight-light: 300;
  --font-weight-regular: 400;
  --font-weight-medium: 500;
  --font-weight-semi-bold: 600;
  --font-weight-bold: 700;
  --font-weight-extra-bold: 800;
  --font-weight-chonk: 900;

  /* Letter spacing */
  --letter-spacing-narrow: 0.02em;
  --letter-spacing-medium: 0.15em;
  --letter-spacing-wide: 0.3em;


  /* STUFF */
  --blur-low: 10px;
  --blur-high: 20px;
  --slope-height: 20rem;
  --slope-degree: 5deg;
  --slope-position: calc(var(--slope-height) / 2);
  --transform-scale: 0.98;
}

html {
  scroll-behavior: smooth;
}

*, *::before, *::after {
  box-sizing: border-box;
}

body {
  font-family: var(--font-stack-body);
  color: var(--color-lightest);
}

h1, h2, h3, h4 {
  font-family: var(--font-stack-heading);
  text-transform: uppercase;
  letter-spacing: var(--letter-spacing-wide);
}

h1 {
  font-size: var(--font-size-900);
}

h2 {
  font-size: var(--font-size-800);
}

h3 {
  font-size: var(--font-size-700);
}

h4 {
  font-size: var(--font-size-600);
}

p {
  font-size: var(--font-size-400);
  /* font-weight: var(--font-weight-thin); */
  /* letter-spacing: var(--letter-spacing-narrow); */
  line-height: 1.6;
  margin-bottom: 2rem;
}

section {
  position: relative;
  text-align: center;
}

.section--bg {
  background-color: var(--color-dark);
}

.section--bg-image {

  /* Fallback bg */
  background-image: 
    linear-gradient(
      var(--bg-overlay), 
      var(--bg-overlay)
    ),
    var(--bg-image-portrait-fb);

  /* Vendor prefixed bg */
  background-image: 
    linear-gradient(
      var(--bg-overlay), 
      var(--bg-overlay)
    ),
    -webkit-image-set(
      var(--bg-image-portrait-lg) 1x,
      var(--bg-image-portrait-xlg) 2x
    );

  background-image: 
    linear-gradient(
      var(--bg-overlay), 
      var(--bg-overlay)
    ),
    image-set(
      var(--bg-image-portrait-lg) 1x,
      var(--bg-image-portrait-xlg) 2x
    );

  background-position: top;
  /* background-size: cover; */

  /* Fallback background color */
  background-color: 
    hsla(
      var(--hue-primary), 
      100%, 
      var(--lightness-dark), 
      var(--opacity-high)
    );

}

.section--positive-slope::before,
.section--negative-slope::before {
  --slope: calc(var(--slope-position) * -1);
  content: "";
  position: absolute;
  /* top: calc(var(--slope-height) / -2); */
  top: var(--slope);
  left: 0;
  right: 0;
  height: var(--slope-height);
  background-color: hsl(var(--hue-primary), 12%, 40%);
  transform: skewY(calc(var(--slope-degree) * -1));
}


.section--negative-slope::before {
  transform: skewY(var(--slope-degree));
}

.section--bottom-slope::before {
  background-color: var(--color-medium-dark);
}

header,
footer,
section {
  padding-inline: clamp(0.5rem, -0.929rem + 7.143vw, 3rem);
}

.container,
.container--grid {
  /* border: 1px dashed yellow; */
  margin: 0 auto;
  max-width: 75em;
}

.container--grid {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
  column-gap: clamp(3rem, 2.2rem + 4vw, 7rem);
  row-gap: 6rem;
}

a {
  color: var(--color-lightest);
  text-decoration: none;
}

.btn {
  font-family: var(--font-stack-heading);
  border: none;
}

.clickable {
  cursor: pointer;
  transition: 200ms ease-in-out;
}

.clickable:hover {
  opacity: 0.7;

  -webkit-transform: scale(var(--transform-scale));
  -moz-transform: scale(var(--transform-scale));
  -ms-transform: scale(var(--transform-scale));
  transform: scale(var(--transform-scale));
}

ul {
  padding: 0;
  margin: 0;
}

li {
  list-style-type: none;
}

img {
  max-width: 100%;
}

label {
  text-align: left;
}

/* Projects */


/* Contact */


/* Footer */

@media (min-width: 50em ) {
  body {

    /* Fallback bg */
    background-image:
      linear-gradient(
        var(--bg-overlay),
        var(--bg-overlay)
      ),
      var(--bg-image-landscape-fb);

    /* Vendor prefixed bg */
    background-image:
      linear-gradient(
        var(--bg-overlay),
        var(--bg-overlay)
      ),
      -webkit-image-set(
        var(--bg-image-landscape-sm) 1x,
        var(--bg-image-landscape-lg) 2x
      );

    background-image:
      linear-gradient(
        var(--bg-overlay),
        var(--bg-overlay)
      ),
      image-set(
        var(--bg-image-landscape-sm) 1x,
        var(--bg-image-landscape-lg) 2x
      );

    background-size: cover;
    background-attachment: fixed;

    /* Fallback bg color */
    background-color: 
      hsla(var(--hue-primary), 
      100%, 
      var(--lightness-dark), 
      var(--opacity-high));
  }

  section {
    text-align: left;
  }

  .section--bg, .section--bg-image {
    background-image: none;
    background-color: transparent;
  }

}

@media (min-width: 62em) {
  .container--grid {
    grid-template-columns: 1.25fr 1fr;
    row-gap: 14rem;
  }
}

